add webui and cross-platform

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,2 @@
-# 接入密钥（多个密钥用逗号分隔） | access keys (separated by commas)
+# 接入API密钥（多个密钥用逗号分隔） | api access keys (separated by commas)
 ACCESS_API_KEYS=your-access-key-1,your-access-key-2
-
-# 服务商API密钥 | provider api keys
-OPENAI_API_KEY=your_openai_api_key
-GOOGLE_API_KEY=your_google_api_key
-DEEPSEEK_API_KEY=your_deepseek_api_key
