--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
-fastapi==0.109.0
-uvicorn==0.27.0
-aiohttp==3.9.1
-python-dotenv==1.0.0
-tiktoken==0.6.0
+fastapi>=0.68.0
+uvicorn>=0.15.0
+python-dotenv>=0.19.0
+pyyaml>=5.4.1
+aiohttp>=3.8.0
+python-jose>=3.3.0
+python-multipart>=0.0.5
+websockets>=10.0
+pydantic>=1.8.2
+tiktoken>=0.3.3
