添加对请求参数的增删改查
- config.yaml 中添加对特定模型的请求参数设置项
- 在 README 中更新设置说明
- 在 config.py 中添加读取参数设置的功能
- 在 router.py 中添加为 adapter 传递参数设置的内容
- 在 openai adapter 中添加处理请求参数设置的逻辑

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -13,13 +13,31 @@ providers:
         timeout: 60
       o3-mini:
         max_tokens: 4096
-        timeout: 60
+        timeout: 120
+        param_config:
+          add_params:
+            reasoning_effort: "low"  # 可选值: low, medium, high
+      o3-mini-medium:
+        max_tokens: 4096
+        timeout: 120
+        param_config:
+          add_params:
+            reasoning_effort: "medium"  # 可选值: low, medium, high
+      o3-mini-high:
+        max_tokens: 4096
+        timeout: 120
+        param_config:
+          add_params:
+            reasoning_effort: "high"  # 可选值: low, medium, high
       deepseek-chat:
         max_tokens: 8192
         timeout: 120
       deepseek-reasoner:
         max_tokens: 8192
-        timeout: 180
+        timeout: 600
+        param_config:
+          update_params:
+            temperature: 0.6
 
   gemini:
     adapter: openai
@@ -47,6 +65,11 @@ providers:
       deepseek-reasoner:
         max_tokens: 8192
         timeout: 180
+        param_config:
+          update_params:
+            temperature: 0.6
+          rename_params:
+            max_tokens: "max_reasoning_token"
 
 # 代理配置
 proxy:
